<resources>
    <string name="app_name">drawmatic</string>
    <string name="title_pick_a_name">Pick a Name</string>
    <string name="button_get_started">Get Started</string>
    <string name="title_offline_mode">How To?</string>
    <string name="title_online_mode">Play</string>
    <string name="title_settings">Settings</string>
    <string name="text_hint_instructions">How to play drawmatic?</string>
    <string name="text_hint_play">Choose how you want to start</string>
    <string name="text_hint_input_play">Search Here</string>
    <string name="text_new_game_play">New\n \t\t\t\t\t Game</string>
    <string name="text_search_games_play">Search\n \t\t\t\t\t\t\t Game</string>
    <string name="hint_choose_room">Choose the room you want to join</string>
    <string name="player_name_settings">Player Name</string>
    <string name="text_hint_create_room">Setup Your Game/Room</string>
    <string name="text_room_name">Game/Room Name</string>
    <string name="text_maximum_players">Maximum Players</string>
    <string name="text_time_for_each_attempt">Time for Each Attempt (min)</string>
    <string name="text_button_next_create_room">Next</string>
    <string name="text_button_cancel_create_room">Cancel</string>
    <string name="title_play_in_offline_mode">Play in Offline Mode?</string>
    <string name="description_offline_mode">Note: Switching to offline mode requires players to pass physical phones to the next player</string>
    <string name="playerNum_4">4</string>
    <string name="playerNum_5">5</string>
    <string name="playerNum_6">6</string>
    <string name="playerNum_7">7</string>
    <string name="playerNum_8">8</string>
    <string name="playerNum_9">9</string>
    <string name="playerNum_10">10</string>
    <string name="playerNum_11">11</string>
    <string name="playerNum_12">12</string>
    <string name="maxTime_05">0.5</string>
    <string name="maxTime_10">1.0</string>
    <string name="maxTime_15">1.5</string>
    <string name="maxTime_20">2.0</string>
    <string name="description_maxTime">Note: The amount of time defined here is for drawing. Set topic time is 30 seconds; guessing time will be 1/2 of the time defined.</string>
    <string name="text_hint_room_waiting">Setup Your Room</string>
    <string name="text_button_start_waiting">Start</string>
    <string name="text_button_cancel_waiting">Leave Room</string>
    <string name="button_quit_set_topic">Quit</string>
    <string name="title_set_topic">Set Your Topic</string>
    <string name="hint_game_set_topic">Wait Until the Time Ends to Finish this Round</string>
    <string name="button_quit_drawing">Quit</string>
    <string name="hint_game_drawing">Draw The Topic in the Yellow Box</string>
    <string name="button_quit_duessing">Quit</string>
    <string name="hint_game_guessing">Guess what this drawing is!</string>
    <string name="hint_result_ready">Your Results are Ready!!</string>
    <string name="button_done_result">Done</string>
    <string name="title_clear">Clear</string>
    <string name="title_undo">Undo</string>
    <string name="title_redo">Redo</string>
    <string name="hint_loading_search_rooms">Searching for Rooms</string>
    <string name="hint_loading_creating_room">Creating Room</string>
    <string name="hint_loading_cancel_room_creation">Canceling Room Creation</string>
    <string name="hint_loading_prepare_room">Preparing your Room</string>
    <string name="hint_loading_leaving_room">Leaving Room</string>
    <string name="hint_loading_starting_game">Be ready to start the Game!</string>
    <string name="hint_loading_loading_data">Loading Data</string>
    <string name="hint_loading_joining_room">Joining...</string>
    <string name="title_leave_app">Leave App?</string>
    <string name="description_leave_the_application">Are you sure you want to leave the Application?</string>
    <string name="button_leave_app">Leave</string>
    <string name="button_stay_in_app">Stay</string>
    <string name="title_leave_game">Leave Game?</string>
    <string name="description_leave_game">Leaving may result in unproper game</string>
    <string name="button_leave_game">Leave the Game</string>
    <string name="button_stay_in_game">Stay in Game</string>
    <string name="hint_no_results">No Results</string>
    <string name="snackbar_hint_name_input">Name Input Required</string>
    <string name="snackbar_hint_something_went_wrong">Something went Wrong. Please try again</string>
    <string name="snackbar_hint_no_network">Please turn on internet</string>
    <string name="text_room_master">Room Master</string>
    <string name="type_participant">Participant</string>
    <string name="hint_playing_searchedRooms">Playing</string>
    <string name="hint_nothing_for_player">Oops, the previous player has nothing for you</string>
    <string name="hint_your_topic_is">Your topic is: </string>
    <string name="hint_topic_from">Topic from: </string>
    <string name="hint_drawing_from">Drawing from: &#160;</string>
    <string name="hint_title_guess_1">Guess - &#160;</string>
    <string name="hint_title_guess_2">&#160; words</string>
    <string name="hint_tap_to_next">, Tap to Next</string>
    <string name="hint_room_name_empty">Room Name is Empty</string>
    <string name="hint_no_network_connection">No Internet Connection</string>
    <string name="item_title_num_players">Number of Players</string>
    <string name="item_title_max_players">Maximum Players</string>
    <string name="hint_room_name">Room name: &#160;</string>
    <string name="hint_player_in_room">&#160; | Player in Room: &#160;</string>
    <string name="hint_min_players_requirements">Need at least 4 players to begin</string>
    <string name="hint_room_name_input">Need to input something</string>
    <string name="hint_selected_room_is_in_game">Selected Room is in Game</string>
    <string name="title_about">About</string>
    <string name="title_privacy_policy">Privacy &amp; Policy</string>
    <string name="des_this_app">Version 1.1.4</string>
    <string name="des_privacy_policy">For details of our privacy policy, please visit
        <a href="https://whichpay.wixsite.com/drawmatic">
            here
        </a>
    </string>
    <string name="hint_tap_to_next_step">Tap to start the next step</string>
    <string name="title_header_1of1">Introduction</string>
    <string name="title_item_1of1">What is this game?</string>
    <string name="title_item_2of1">Game Requirements?</string>
    <string name="des_item_1of1">This is a party game for everyone!\n\nIn this party game, players will draw and guess respectively, from their previous players.\n\nAfter every one finishes, check out who\'s drawing and guessing is the most ridiculous and hilarious!!\n\nNo need to spend a lot of time learning, anyone can start this game and enjoy in 30 seconds.\n\nSo what is the goal of the game? Well, it is not to win, but to have fun!!!</string>
    <string name="des_item_2of1">Minimum Player: 4\n\nMaximum Players: 12\n\nTools: Your Phone</string>
    <string name="title_header_1of2">How to play?</string>
    <string name="title_item_1of2">Step 1</string>
    <string name="title_item_2of2">Step 2</string>
    <string name="title_item_3of2">Step 3</string>
    <string name="title_item_4of2">Step 4</string>
    <string name="title_item_5of2">Step 5</string>
    <string name="title_item_6of2">Step 6</string>
    <string name="des_item_1of2">You can start the games in 2 ways. In the main menu, either create a game for others to join, or search and join an existing game your friend created.</string>
    <string name="des_item_2of2">After every player has joined the game, the creator can start the game</string>
    <string name="des_item_3of2">In the 1st round, every one should think about a topic and type it into the input box and wait until the time at the top finishes (time amount is one of the room settings of room master)</string>
    <string name="des_item_4of2">Then, in the 2nd round, the topic will be delivered to the next player automatically, where players will see the topic from some one, and will need to turn the words into a hand-drawing for the next player to guess what it is
                \n\nNote:
                \n\nodd-numbered players and even-numbered players will have slightly different rules
                \n\nOdd-Numbered Players: All players will set a topic and the topic will be delivered to the next player automatically in this 2nd round
                \n\nEven-Numbered pLayers: All players will set a topic, but the players will have to turn the topic they set in the 1st round into a drawing in this 2nd round
                \n\nThe rest of the game is the same for both odd-numbered players and even-numbered players</string>
    <string name="des_item_5of2">In the 3rd round, all players will receive a drawing from some one in the game, and your goal is to guess what the drawing is about
                \n\nHint: There will be word count as hint</string>
    <string name="des_item_6of2">The game will continue with rounds 2 and 3 one after the other until each topic goes through all players in the game
                \n\nAfter every one finishes, each player will have all the drawings and guessings related to the topic they set in the 1st round.
                \n\nPlease swipe left to see how to use the results to enjoy the best part of this game!!</string>
    <string name="title_header_1of3">Show the Results</string>
    <string name="title_item_1of3">Step 1</string>
    <string name="title_item_2of3">Step 2</string>
    <string name="title_item_3of3">Step 3</string>
    <string name="title_item_4of3">Step 4</string>
    <string name="des_item_1of3">After the game finishes, every player will have the results (drawings and guessings) related to the topic they set in the 1st round
                \n\nGo to the first drawing, let every one guess what the drawing is without knowing the real answer(topic)</string>
    <string name="des_item_2of3">Continue along with the results one by one to see who is the rotten apple that spoils the barrel!!!</string>
    <string name="des_item_3of3">Finally, show the final answer to every player</string>
    <string name="des_item_4of3">Well the above is the recommended way to present the results
                \n\nBut you can present the results however you like!
                \n\nThe point is...... Have Fun!</string>
</resources>