<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".online.createroom.CreateRoomFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearlayout_button_create_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout_text_create_room">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/box_items_create_room"
                    android:elevation="3dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="3dp"
                        android:text="@string/title_play_in_offline_mode"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/switch_button"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switch_button"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:sb_background="@color/colorGreyLight"
                        app:sb_checked_color="@color/colorAccent"
                        app:sb_show_indicator="false"/>
                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/description_offline_mode"
                    tools:layout_editor_absoluteX="107dp"
                    tools:layout_editor_absoluteY="123dp"/>

                <LinearLayout
                    android:id="@+id/layout_room_name_create_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/box_items_create_room"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/text_room_name_create_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_room_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/edittext_room_name_create_room"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/box_room_name_online"
                        android:ems="10"
                        android:gravity="start|center_vertical"
                        android:inputType="textPersonName"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/box_items_create_room"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/text_max_players_create_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_maximum_players"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                        android:id="@+id/toggleGroup_numPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:tbgCheckedButton="@+id/numPlayer_4"
                        app:tbgFlow="true">

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerNum_4"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/playerNum_5"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_6"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_7"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_8"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_9"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerNum_10"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_11"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/numPlayer_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/playerNum_12"
                            app:tbgMarkerColor="@color/colorPrimary"/>
                    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time_attempt_create_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/box_items_create_room"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/text_time_attempt_create_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_time_for_each_attempt"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                        android:id="@+id/toggleGroup_attemptTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:tbgCheckedButton="@+id/min_05"
                        app:tbgFlow="true">

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/min_05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maxTime_05"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/min_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/maxTime_10"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/min_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/maxTime_15"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/min_20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/maxTime_20"
                            app:tbgMarkerColor="@color/colorPrimary"/>

                    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/description_maxTime"
                    tools:layout_editor_absoluteX="107dp"
                    tools:layout_editor_absoluteY="123dp"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearlayout_button_create_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/button_cancel_create_room"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/box_button_leave_game_bottom_dialog"
                android:elevation="8dp"
                android:text="@string/text_button_cancel_create_room"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/button_next_create_room"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/box_button_stay_in_game_bottom_dialog"
                android:elevation="8dp"
                android:foreground="?selectableItemBackgroundBorderless"
                android:text="@string/text_button_next_create_room"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout_text_create_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_hint_create_room"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_hint_create_room"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>