<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/text_title_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_leave_game"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_description_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_leave_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_alert"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description_alert">

        <Button
            android:id="@+id/button_leave_game_bottom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/box_button_leave_game_bottom_dialog"
            android:foreground="?selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/button_leave_game"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_stay_in_game_bottom_dialog"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_stay_in_game_bottom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/box_button_stay_in_game_bottom_dialog"
            android:foreground="?selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/button_stay_in_game"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/button_leave_game_bottom_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description_alert"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>